quellen für technologie auswahl schnittstellen in literatur.bib

--- a/Ausarbeitung/literatur.bib
+++ b/Ausarbeitung/literatur.bib
@@ -29,4 +29,84 @@
 	urldate      = {2025-01-11},
 	note    = {OWASP Foundation}
 }
+@misc{python_flask_prototyping,
+  author       = {Python Software Foundation},
+  title        = {Flask Web Framework},
+  year         = {2024},
+  url          = {https://flask.palletsprojects.com},
+  note         = {Zugriff: April 2025}
+}
+
+@misc{python_mqtt,
+  author       = {Eclipse Foundation},
+  title        = {paho-mqtt: Python MQTT Client Library},
+  year         = {2024},
+  url          = {https://www.eclipse.org/paho/index.php?page=clients/python/index.php},
+  note         = {Zugriff: April 2025}
+}
+
+@article{rfc2104_hmac,
+  author = {H. Krawczyk and M. Bellare and R. Canetti},
+  title = {HMAC: Keyed-Hashing for Message Authentication},
+  journal = {RFC 2104, IETF},
+  year = {1997},
+  url = {https://tools.ietf.org/html/rfc2104}
+}
+
+@misc{mqtt_overview,
+  author    = {OASIS MQTT Standard},
+  title     = {MQTT Version 3.1.1 Specification},
+  year      = {2014},
+  url       = {https://docs.oasis-open.org/mqtt/mqtt/v3.1.1/os/mqtt-v3.1.1-os.html},
+  note      = {Zugriff: April 2025}
+}
+
+@misc{mqtt_vs_kafka,
+  author       = {EMQ Technologies},
+  title        = {MQTT vs. Kafka: Which is Better for IoT?},
+  year         = {2023},
+  url          = {https://www.emqx.com/en/blog/mqtt-vs-kafka-iot},
+  note         = {Zugriff: April 2025}
+}
+
+@misc{solace_python_doc,
+  author       = {Solace Corporation},
+  title        = {Getting Started with Solace Messaging in Python},
+  year         = {2023},
+  url          = {https://docs.solace.com/Features/python-api.htm},
+  note         = {Zugriff: April 2025}
+}
+
+@misc{solace_overview,
+  author       = {Solace Corporation},
+  title        = {Solace PubSub+ Overview: The Advanced Event Broker},
+  year         = {2024},
+  url          = {https://solace.com/products/event-broker/overview/},
+  note         = {Zugriff: April 2025}
+}
+
+@misc{flasgger_docs,
+  author       = {Flasgger Project},
+  title        = {Flasgger: Swagger UI for Flask APIs},
+  year         = {2023},
+  url          = {https://github.com/flasgger/flasgger},
+  note         = {Zugriff: April 2025}
+}
+
+@misc{smtp_tls,
+  author       = {Mozilla Foundation},
+  title        = {SMTP and Email Security Best Practices},
+  year         = {2023},
+  url          = {https://infosec.mozilla.org/guidelines/email/},
+  note         = {Zugriff: April 2025}
+}
+
+@misc{json_best_practices,
+  author       = {JSON.org},
+  title        = {Introducing JSON: A Lightweight Data-Interchange Format},
+  year         = {2022},
+  url          = {https://www.json.org/json-en.html},
+  note         = {Zugriff: April 2025}
+}
+
 
