Adding sections `Scrum`, `APIs`, `Designprinzipien`

--- a/Ausarbeitung/Präamble/acronyms.tex
+++ b/Ausarbeitung/Präamble/acronyms.tex
@@ -1,7 +1,8 @@
 %Überschrift "Abkürzungsverzeichnis" setzen
 \section*{Abkürzungsverzeichnis}
 \addcontentsline{toc}{section}{Abkürzungsverzeichnis}
-\begin{acronym}[STRIDE]
+%\begin{acronym}[STRIDE]
 	%\acro{EXP}{example}	-> Im text verwenden mit \ac{EXP}	
+    
 	
-\end{acronym}
+%\end{acronym}
