--- a/Ausarbeitung/literatur.bib
+++ b/Ausarbeitung/literatur.bib
@@ -30,3 +30,191 @@
 	note    = {OWASP Foundation}
 }
 
+@Book{Powell1974,
+  author    = {Powell, John},
+  publisher = {RCL},
+  title     = {The Secret of Staying in Love -},
+  year      = {1974},
+  isbn      = {978-0-883-47299-6},
+}
+
+@BOOK{Brin1998,
+	AUTHOR = {Brin, David},
+	YEAR = {1998},
+	TITLE = {Postman - Roman},
+	EDITION = {},
+	ISBN = {978-3-453-13898-8},
+	PUBLISHER = {Heyne},
+	ADDRESS = {München},
+}
+
+@BOOK{Wolf2011,
+	AUTHOR = {Wolf, Henning AND Bleek, Wolf-Gideon},
+	YEAR = {2011},
+	TITLE = {Agile Softwareentwicklung - Werte, Konzepte und Methoden},
+	EDITION = {},
+	ISBN = {978-3-864-91021-0},
+	PUBLISHER = {dpunkt.verlag},
+	ADDRESS = {Heidelberg},
+}
+
+@Online{Drumond,
+  author       = {Claire Drumond},
+  title        = {Das Agile Manifest},
+  url          = {https://www.atlassian.com/de/agile/manifesto},
+  urldate      = {2024-08-09},
+  language     = {de},
+  organization = {Atlassian},
+}
+
+@Online{Snowbird2001,
+  author   = {Kent Beck, Mike Beedle, et al.},
+  date     = {2001},
+  title    = {Manifest für Agile Softwareentwicklung},
+  url      = {https://agilemanifesto.org/iso/de/manifesto.html},
+  urldate  = {2024-08-09},
+  language = {de},
+}
+
+@BOOK{Kofler2024,
+	AUTHOR = {Kofler, Michael},
+	YEAR = {2024},
+	TITLE = {Datenbanksysteme - das umfassende Lehrbuch},
+	EDITION = {},
+	ISBN = {978-3-367-10015-6},
+	PUBLISHER = {Rheinwerk Verlag},
+	ADDRESS = {Bonn},
+}
+
+@BOOK{Fröhlich2022,
+	AUTHOR = {Fröhlich, Lutz},
+	YEAR = {2022},
+	TITLE = {PostgreSQL - Praxisbuch für Administratoren und Entwickler},
+	EDITION = {},
+	ISBN = {978-3-446-47315-7},
+	PUBLISHER = {Carl Hanser Verlag GmbH  Co KG},
+	ADDRESS = {M},
+}
+
+@article{Chauhan2019,
+  author    = {Anjali Chauhan},
+  title     = {A Review on Various Aspects of MongoDb Databases},
+  journal   = {International Journal of Engineering Research \& Technology (IJERT)},
+  volume    = {08},
+  number    = {05},
+  year      = {2019},
+  month     = {May},
+  url       = {https://www.ijert.org/a-review-on-various-aspects-of-mongodb-databases},
+  urldate   = {2024-08-13},
+  issn      = {2278-0181},
+}
+
+@Online{IamXander2024,
+  author   = {IamXander},
+  date     = {2024-04-06},
+  title    = {Storage Engine API},
+  url      = {https://github.com/mongodb/mongo/blob/master/src/mongo/db/storage/README.md},
+  urldate  = {2024-08-13},
+  language = {en},
+  version  = {35db3811d8f749edd5b79ba910adcbc1ceb54cc4},
+}
+
+@Online{themattman2024,
+  author   = {themattman},
+  date     = {2024-08-08},
+  title    = {Execution Internals},
+  url      = {https://github.com/mongodb/mongo/blob/master/src/mongo/db/catalog/README.md},
+  urldate  = {2024-08-13},
+  language = {en},
+  version  = {17a11f90374c2f1f0a8f5d7844819c13721591b8},
+}
+
+@Online{Velikhov,
+  author  = {Pavel Velikhov},
+  title   = {BSON - Specification Version 1.1},
+  url     = {https://bsonspec.org/spec.html},
+  urldate = {2024-08-13},
+}
+
+@Online{JetBrains2023,
+  author  = {JetBrains},
+  date    = {2023},
+  title   = {Developer Ecosystem - Go},
+  url     = {https://www.jetbrains.com/lp/devecosystem-2023/go/},
+  urldate = {2024-08-16},
+}
+
+@Online{Pike,
+  author  = {Rob Pike},
+  title   = {Go at Google: Language Design in the Service of Software Engineering},
+  url     = {https://go.dev/talks/2012/splash.article},
+  urldate = {2024-08-16},
+}
+
+@Online{Merrick2023,
+  author  = {Alice Merrick},
+  date    = {2023-05-11},
+  title   = {Go Developer Survey 2023 Q1 Results},
+  url     = {https://go.dev/blog/survey2023-q1-results},
+  urldate = {2024-08-16},
+}
+
+@Book{Kuree,
+  author    = {Kuree},
+  publisher = {GitHub},
+  title     = {The Go Programming Language Report},
+  url       = {https://kuree.gitbooks.io/the-go-programming-language-report/content/index.html},
+}
+
+@Online{TutorialsFreak,
+  author  = {TutorialsFreak},
+  title   = {Kotlin History},
+  url     = {https://www.tutorialsfreak.com/kotlin-tutorial/kotlin-history},
+  urldate = {2024-08-16},
+}
+
+@Online{AndroidKnowlage2023,
+  author  = {AndroidKnowlage},
+  date    = {2023},
+  title   = {Ultimate Battle: Why Kotlin Wins Over Java in Android Development in 2023},
+  url     = {https://androidknowledge.com/why-kotlin-over-java-in-android-development/},
+  urldate = {2024-08-16},
+}
+
+@BOOK{Sinsel2019,
+	AUTHOR = {Sinsel, Alexander},
+	YEAR = {2019},
+	TITLE = {Das Internet der Dinge in der Produktion - Smart Manufacturing für Anwender und Lösungsanbieter},
+	EDITION = {},
+	ISBN = {978-3-662-59761-3},
+	PUBLISHER = {Springer-Verlag},
+	ADDRESS = {Berlin Heidelberg New York},
+}
+
+@BOOK{Masse2011,
+	AUTHOR = {Masse, Mark},
+	YEAR = {2011},
+	TITLE = {REST API Design Rulebook - Designing Consistent RESTful Web Service Interfaces},
+	EDITION = {},
+	ISBN = {978-1-449-31990-8},
+	PUBLISHER = {"O'Reilly Media, Inc."},
+	ADDRESS = {Sebastopol},
+}
+
+
+@Online{Solace,
+  author   = {Solace},
+  title    = {Get Started with PubSub+},
+  url      = {https://docs.solace.com/Get-Started/Solace-PubSub-Platform.htm},
+  urldate  = {2024-08-19},
+  language = {en},
+}
+
+@Online{JohnAuYeung2020,
+  author  = {John Au-Yeung, Rayan Donovan},
+  date    = {2020-03-02},
+  title   = {Best practices for REST API design},
+  url     = {https://stackoverflow.blog/2020/03/02/best-practices-for-rest-api-design/},
+  urldate = {2024-08-19},
+}
+
