--- a/Ausarbeitung/main.tex
+++ b/Ausarbeitung/main.tex
@@ -31,7 +31,14 @@ hidelinks %Links nicht einrahmen
 
 \usepackage{todonotes}
 
-\usepackage[printonlyused]{acronym}
+%\usepackage[printonlyused]{acronym}
+% Akronymverzeichnis
+\usepackage{hyperref}
+\usepackage{array}
+\usepackage{supertabular}
+\usepackage{acro}
+\acsetup{make-links}
+\input{acronyms}
 
 \usepackage{minted} %für Darstellung von Code
 \usepackage{float}
@@ -42,7 +49,7 @@ hidelinks %Links nicht einrahmen
 \usepackage{xspace}
 
 % Define a command to ensure consistent space after acronym
-\newcommand{\acspace}{\xspace\hspace{1em}}
+%\newcommand{\acspace}{\xspace\hspace{1em}}
 
 \makeatletter
 \renewcommand*{\aclabelfont}[1]{\textbf{\acsfont{#1}\acspace}}
@@ -86,6 +93,7 @@ hidelinks %Links nicht einrahmen
 }
 % Label für Listings ändern
 \renewcommand{\lstlistingname}{Beispiel}
+\newcommand{\code}[1]{\colorbox{gray!20}{\consola #1}}
 
 \usepackage{titlesec}
 \titleformat{\chapter}[hang]
@@ -117,8 +125,10 @@ hidelinks %Links nicht einrahmen
 	\tableofcontents
 	
 	%------------- Abkürzungsverzeichnis -------------
-	\include{./Präamble/acronyms}
-	\newpage
+	%\include{./Präamble/acronyms}
+	\printacronyms[template=supertabular]
+    \addcontentsline{toc}{chapter}{Abkürzungen}
+    \newpage
 	
 	%------------- Abbildungsverzeichnis -------------
 	\section*{Abbildungsverzeichnis}
@@ -152,6 +162,9 @@ hidelinks %Links nicht einrahmen
 	% ------------- Hauptteil -------------
 
 	\chapter{Theoretische Grundlagen}
+	\input{Theoretische Grundlagen/TG_Scrum}
+	\input{Theoretische Grundlagen/TG_APIs}
+	\input{Theoretische Grundlagen/TG_Designprinzipien}
 	%\input{Theroretische Grundlagen/TG_example}
 	\newpage
 	\chapter{Anforderungen}
