Adding section `Datenbanken`

--- a/Ausarbeitung/literatur.bib
+++ b/Ausarbeitung/literatur.bib
@@ -218,3 +218,12 @@
   urldate = {2024-08-19},
 }
 
+@Online {Prokopiou2021,
+    author   = {Vagelis Prokopiou},
+  title    = {Web api benchmarking: Go (Fiber) vs Rust (actix-web) },
+  url      = {https://youtu.be/MY3Ou5ehwUQ},
+  urldate  = {2025-04-13},
+  date    = {2021-12-19},
+  language = {en},
+}
+
