--- a/Ausarbeitung/main.tex
+++ b/Ausarbeitung/main.tex
@@ -68,6 +68,7 @@ hidelinks %Links nicht einrahmen
 \usepackage{amssymb}
 
 \usepackage{listings}
+\usepackage{listings-golang}
 \usepackage{xcolor}  % Optional, für zusätzliche Farbanpassungen
 \lstset{ 
 	language=Python,                % Programmiersprache
@@ -171,6 +172,8 @@ hidelinks %Links nicht einrahmen
 	%\input{Anforderungen/Anforderungen_example}
 	\newpage
 	\chapter{Auswahl der Technologien}
+	\input{Auswahl der Technologien/AdT_Programmiersprache_BFF}
+	\input{Auswahl der Technologien/AdT_Datenbankentscheidung}
 	%\input{Auswahl der Technologien/AdT_example}
 	\newpage
 	\chapter{Umsetzung}
