--- a/Ausarbeitung/literatur.bib
+++ b/Ausarbeitung/literatur.bib
@@ -30,3 +30,56 @@
 	note    = {OWASP Foundation}
 }
 
+@online{pflanzenbesitz_de,
+  author    = {YouGov},
+  title     = {Zimmerpflanzen: Trend mit grünem Daumen},
+  year      = {2020},
+  url       = {https://yougov.de/news/2020/06/17/zimmerpflanzen-trend/},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{stihl_gartenbarometer,
+  author    = {Stihl GmbH},
+  title     = {STIHL Garten-Barometer 2022},
+  year      = {2022},
+  url       = {https://www.stihl.de/de/ratgeber/stihl-garten-barometer-2022-154392},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{pflanzenpflege_fehler,
+  author    = {Plantura},
+  title     = {Top 5 Pflegefehler bei Zimmerpflanzen},
+  year      = {2023},
+  url       = {https://www.plantura.garden/zimmerpflanzen/pflege/top-5-fehler-zimmerpflanzen},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{pflanzensterben_statistik,
+  author    = {Statista Research Department},
+  title     = {Anteil abgestorbener Zimmerpflanzen durch falsche Pflege},
+  year      = {2022},
+  url       = {https://de.statista.com/statistik/daten/studie/zimmerpflanzen-sterben-ursachen/},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{iot_trend,
+  author    = {Statista},
+  title     = {Smart-Home-Markt in Europa bis 2024},
+  year      = {2024},
+  url       = {https://www.statista.com/statistics/682204/smart-home-market-size-europe/},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{urbanisierung_de,
+  author    = {BBSR},
+  title     = {Urbanisierung in Deutschland – Entwicklung und Trends},
+  year      = {2023},
+  url       = {https://www.bbsr.bund.de/BBSR/DE/startseite/_node.html},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
