Adding `Programmiersprache Rust`

--- a/Ausarbeitung/acronyms.tex
+++ b/Ausarbeitung/acronyms.tex
@@ -82,15 +82,15 @@
 	short= DoS,
 	long =Denial of Service
 }
-\DeclareAcronym{lnp}{
-	short= LNP,
-	long =Lieferantenportal
+\DeclareAcronym{nll}{
+	short= NLL,
+	long =Non Lexical Lifetimes
 }
-\DeclareAcronym{dmsek}{
-	short= DMSEK,
-	long =Dokumentenmanagementsystem Einkauf
+\DeclareAcronym{gc}{
+	short= GC,
+	long =Garbage Collector
 }
-\DeclareAcronym{saf}{
-	short= SAF,
-	long =Sortimentsabwicklung Food
+\DeclareAcronym{cors}{
+	short= CORS,
+	long =Cross-Origin Resource Sharing
 }
