--- a/Ausarbeitung/literatur.bib
+++ b/Ausarbeitung/literatur.bib
@@ -226,4 +226,97 @@
   date    = {2021-12-19},
   language = {en},
 }
+}
+
+@Online {mark-i-m2025,
+    author   = { mark-i-m, +407 weitere },
+  title    = {Rust Compiler Development Guide},
+  url      = {https://rustc-dev-guide.rust-lang.org/},
+    version = {85c796488d2648a83a234ba821a44205c5e21093},
+  urldate  = {2025-04-14},
+  date    = {2025-04-14},
+  language = {en},
+}
+
+@Online {Matsakis2022,
+    author   = { Niko Matsakis},
+  title    = {Non-lexical lifetimes (NLL) fully stable},
+  url      = {https://blog.rust-lang.org/2022/08/05/nll-by-default.html},
+  urldate  = {2025-04-14},
+  date    = {2022-08-05},
+  language = {en},
+}
+
+@Online {wiki2024rust,
+    author   = {Wikipedia, Binbesser},
+  title    = {Rust (Programmiersprache)},
+  url      = {https://de.wikipedia.org/wiki/Rust_(Programmiersprache)},
+  urldate  = {2025-04-14},
+  date    = {2024-05-03},
+  language = {de},
+}
+
+@Online {Bhavya2021,
+    author   = {Bhavya},
+  title    = {Clash of the compiled: Golang vs Rust},
+  url      = {https://bhavya-saraf.medium.com/clash-of-the-compiled-golang-vs-rust-62595cb90377},
+  urldate  = {2025-04-14},
+  date    = {2021-11-30},
+  language = {en},
+}
+
+@Online {puri2025,
+    author   = {Devrata puri },
+  title    = {Rust Ownership vs Garbage Collector: A Detailed Comparison with Code },
+  url      = {https://dev.to/devratapuri/day-2-rust-ownership-vs-garbage-collector-a-detailed-comparison-with-code-52ad?utm_source=chatgpt.com},
+  urldate  = {2025-04-14},
+  date    = {2025-01-01},
+  language = {en},
+}
+
+@Online {Proxify2021,
+    author   = {Proxify Content Team},
+  title    = {Rust and Go performance comparison: Which one is better for high-performance apps? },
+  url      = {https://proxify.io/articles/rust-and-go-performance-comparison?utm_source=chatgpt.com},
+  urldate  = {2025-04-14},
+  date    = {2021-05-05},
+  language = {en},
+}
+
+@Online {Abhinav2025,
+    author   = {Abhinav},
+  title    = {Golang vs. Rust: The Ultimate Showdown for Performance and Safety},
+  url      = {https://medium.com/%40abhinavv.singh/golang-vs-rust-the-ultimate-showdown-for-performance-and-safety-aa8b1336f512},
+  urldate  = {2025-04-14},
+  date    = {2025-03-29},
+  language = {en},
+}
+
+@Online {dami2024,
+    author   = {dami},
+  title    = {Rust vs Go? Which Should You Learn in 2025},
+  url      = {https://dev.to/thatcoolguy/rust-vs-go-which-should-you-choose-in-2024-50k5?utm_source=chatgpt.com},
+  urldate  = {2025-04-14},
+  date    = {2024-08-27},
+  language = {en},
+}
+
+@Online {Obregon2023,
+    author   = {Alexander Obregon},
+  title    = {Journey to Fearless Concurrency — Rust vs. Go},
+  url      = {https://medium.com/%40AlexanderObregon/journey-to-fearless-concurrency-rust-vs-go-31d49255d6b6},
+  urldate  = {2025-04-14},
+  date    = {2023-08-06},
+  language = {en},
+}
+
+@Book{SteveKlabnik2024,
+  author    = {Steve Klabnik, Carol Nichols},
+  publisher = {Herbert Reiter},
+  title     = {Die Programmiersprache Rust},
+  edition   = {2. Auflage},
+  isbn      = {978-3-98871-003-1},
+  date = {2024-03-16},
+  url       = {https://rust-lang-de.github.io/rustbook-de/title-page.html},
+}
 
