--- a/Ausarbeitung/literatur.bib
+++ b/Ausarbeitung/literatur.bib
@@ -241,5 +241,176 @@
   note      = {Zugriff am 13. April 2025}
 }
 
+@misc{SolaceProtocols,
+  title        = {Supported Open APIs and Protocols},
+  author       = {Solace},
+  year         = {2024},
+  url          = {https://docs.solace.com/Open-APIs-Protocols/open-apis.htm},
+  note         = {Zugriff am 13. April 2025}
+}
+
+@misc{SolaceDirectGuaranteed,
+  title        = {Direct and Guaranteed Messaging Overview},
+  author       = {Solace},
+  year         = {2024},
+  url          = {https://docs.solace.com/Messaging/Messaging-Concepts.htm},
+  note         = {Zugriff am 13. April 2025}
+}
+
+@misc{SolaceTopicWildcard,
+  title        = {Topic Subscription Syntax and Wildcards},
+  author       = {Solace},
+  year         = {2024},
+  url          = {https://docs.solace.com/PubSub-Basics/Wildcard-Charaters-Topic-Subs.htm},
+  note         = {Zugriff am 13. April 2025}
+}
+
+@misc{SolaceMQTT,
+  title        = {Using MQTT with Solace PubSub+},
+  author       = {Solace},
+  year         = {2024},
+  url          = {https://docs.solace.com/Features/Core-Features/MQTT.htm},
+  note         = {Zugriff am 13. April 2025}
+}
+
+@misc{SolaceDaprMQTT,
+  title        = {Solace Dapr MQTT Support},
+  author       = {Solace},
+  year         = {2024},
+  url          = {https://docs.solace.com/Integrations/Dapr/Dapr-MQTT.htm},
+  note         = {Zugriff am 13. April 2025}
+}
+
+@misc{SolaceACL,
+  title        = {About Access Control Lists (ACLs)},
+  author       = {Solace},
+  year         = {2024},
+  url          = {https://docs.solace.com/Configuring-and-Managing/Configuring-ACLs.htm},
+  note         = {Zugriff am 13. April 2025}
+}
+
+
+
+@misc{AvnetPSK,
+  title        = {Securing MQTT with TLS and PSK on IoT Devices},
+  author       = {Avnet Silica},
+  year         = {2022},
+  url          = {https://www.avnet.com/wps/portal/silica/resources/whitepapers/securing-mqtt-psk},
+  note         = {Zugriff am 13. April 2025}
+}
+
+@article{Kreps2011,
+  author    = {Jay Kreps and Neha Narkhede and Jun Rao},
+  title     = {Kafka: A Distributed Messaging System for Log Processing},
+  journal   = {NetDB},
+  year      = {2011},
+  note      = {Verfügbar unter: \url{https://kafka.apache.org/08/documentation.html}}
+}
+
+@misc{RFC2104,
+  author  = {H. Krawczyk and M. Bellare and R. Canetti},
+  title   = {HMAC: Keyed-Hashing for Message Authentication},
+  howpublished = {RFC 2104},
+  year    = {1997},
+  url     = {https://datatracker.ietf.org/doc/html/rfc2104}
+}
+
+@misc{FIPS198,
+  title     = {The Keyed-Hash Message Authentication Code (HMAC)},
+  author    = {National Institute of Standards and Technology (NIST)},
+  year      = {2008},
+  howpublished = {FIPS Publication 198-1},
+  url       = {https://csrc.nist.gov/publications/detail/fips/198/1/final}
+}
+
+@misc{RFC4226,
+  author  = {D. M’Raihi and S. Machani and M. Pei and J. Rydell},
+  title   = {HOTP: An HMAC-Based One-Time Password Algorithm},
+  howpublished = {RFC 4226},
+  year    = {2005},
+  url     = {https://datatracker.ietf.org/doc/html/rfc4226}
+}
+
+@article{Krawczyk1997,
+  author  = {Hugo Krawczyk},
+  title   = {The order of encryption and authentication for protecting communications (or: how secure is SSL?)},
+  journal = {Advances in Cryptology — CRYPTO '01},
+  year    = {2001},
+  publisher = {Springer},
+  doi     = {10.1007/3-540-44647-8_8}
+}
+
+@misc{cryptographyFernet,
+  title     = {Fernet (symmetric encryption)},
+  author    = {Cryptography.io},
+  year      = {2024},
+  url       = {https://cryptography.io/en/latest/fernet/},
+  note      = {Zugriff am 13. April 2025}
+}
+
+@misc{FernetSpec,
+  title     = {Fernet Token Format Specification},
+  author    = {Fernet Authors},
+  year      = {2014},
+  url       = {https://github.com/fernet/spec/blob/master/Spec.md},
+  note      = {Zugriff am 13. April 2025}
+}
+@misc{solaceSEMP,
+  title = {Solace PubSub+ SEMP API v2 Documentation},
+  author = {Solace Corporation},
+  year = {2024},
+  url = {https://docs.solace.com/API-Developer-Online-Ref-Documentation/swagger-ui/config/index.html},
+  note = {Accessed April 14, 2025}
+}
+
+@misc{pythonSecrets,
+  title = {secrets — Generate secure random numbers for managing secrets},
+  author = {Python Software Foundation},
+  year = {2024},
+  url = {https://docs.python.org/3/library/secrets.html},
+  note = {Accessed April 14, 2025}
+}
+
+@misc{fernetSpec,
+  title = {Fernet (symmetric encryption) specification},
+  author = {Python Cryptography Project},
+  year = {2024},
+  url = {https://cryptography.io/en/latest/fernet/},
+  note = {Accessed April 14, 2025}
+}
+
+@misc{mqttSpec,
+  title = {MQTT Version 3.1.1 Specification},
+  author = {OASIS Standard},
+  year = {2014},
+  url = {https://docs.oasis-open.org/mqtt/mqtt/v3.1.1/os/mqtt-v3.1.1-os.html},
+  note = {Accessed April 14, 2025}
+}
+
+@misc{fastAPI,
+  title = {FastAPI - The modern Python web framework},
+  author = {Sebastián Ramírez},
+  year = {2024},
+  url = {https://fastapi.tiangolo.com/},
+  note = {Accessed April 14, 2025}
+}
+
+@misc{hmacRFC,
+  title = {HMAC: Keyed-Hashing for Message Authentication (RFC 2104)},
+  author = {M. Krawczyk and H. Krawczyk and H. Shacham},
+  year = {1997},
+  url = {https://www.rfc-editor.org/rfc/rfc2104},
+  note = {Accessed April 14, 2025}
+}
+
+@misc{pskDesign,
+  title = {Pre-Shared Key (PSK) Authentication in IoT Systems},
+  author = {OWASP Foundation},
+  year = {2023},
+  url = {https://owasp.org/www-project-internet-of-things/},
+  note = {Accessed April 14, 2025}
+}
+
+
 
 
