--- a/Ausarbeitung/main.tex
+++ b/Ausarbeitung/main.tex
@@ -152,16 +152,17 @@ hidelinks %Links nicht einrahmen
 	% ------------- Hauptteil -------------
 
 	\chapter{Theoretische Grundlagen}
-	%\input{Theroretische Grundlagen/TG_example}
+	\input{Theroretische Grundlagen/TheoretischeGrundlagenSchnittstellen}
 	\newpage
 	\chapter{Anforderungen}
-	%\input{Anforderungen/Anforderungen_example}
+ 	%test
+	\input{Anforderungen/AnforderungenAnSchnittstellenServices}
 	\newpage
 	\chapter{Auswahl der Technologien}
-	%\input{Auswahl der Technologien/AdT_example}
+	\input{Auswahl der Technologien/AuswahlDerTechnologienSchnittstellenservices}
 	\newpage
 	\chapter{Umsetzung}
-	%\input{Umsetzung/Umsetzung_example}
+	\input{Umsetzung/UmsetzungSchnittstellenservices}
 	\newpage
 	
 	% ------------- Ende Hautpteil -------------
